[archives] Overhaul ArchiveRetriever to make generic
Remove links to Audit document
Return an Optional in retrieveByBizId